# src/pages/api/v1/channels/telegram/webhook/[secret].ts
@@ -1,0 +1,3 @@
+export { handler } from "./index";
+export { default } from "./index";
+
